# codeurcv

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SETUP.md  action.yml  pyproject.toml  render.py  resume.yml  template.tex
.claude/: settings.local.json
.github/: release-please.yml
.github/workflows/: build-pdf.yml
example/: config.yml
example/.github/workflows/: build.yml
output/: resume.tex
src/: build.sh  constants.py  render.py
src/codeurcv/: __main__.py  cli.py
src/codeurcv/core/: config_loader.py  constants.py  dependency_checker.py  logger.py  markdown_converter.py  markdown_to_typst.py  plugin_loader.py  renderer.py  schema.py  settings.py  template_engine.py  template_loader.py
src/codeurcv/plugins/: base.py
src/codeurcv/plugins/classic/: plugin.py  template.typ
src/codeurcv/plugins/faang/: plugin.py  template.typ
src/codeurcv/plugins/minimalist/: plugin.py  template.tex
src/codeurcv/plugins/modern/: plugin.py  template.typ
src/codeurcv/templates/: base.py
src/codeurcv/templates/classic/: plugin.py
src/codeurcv/templates/faang/: plugin.py  template.typ
src/codeurcv/templates/minimalist/: plugin.py  template.typ
src/codeurcv/templates/modern/: plugin.py
src/templates/minimalist/: template.tex
