[project]
name = "codeurcv"
version = "0.5.1"
description = "A Python library to generate LaTeX resumes from YAML configuration files using Jinja2 templates."
authors = [
    { name = "crackedngineer", email = "subhomoyrchoudhury@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "typer>=0.24.1",
]
keywords = ["python", "digipin", "coordinates"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]

[tool.poetry]
homepage = "https://github.com/crackedngineer/code-ur-cv"
repository = "https://github.com/crackedngineer/code-ur-cv"
documentation = "https://github.com/crackedngineer/code-ur-cv/"
packages = [
    { include = "codeurcv", from = "src" },
]

[tool.hatch.build.targets.wheel]
packages = ["src/codeurcv"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.poetry.scripts]
codeurcv = "codeurcv.__main__:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
